--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -190,6 +190,24 @@ en:
   gui_validation_error: 1 error
   gui_validation_error_plural: "%{count} errors"
 
+  activity:
+    added: added
+    announced: announced
+    attached: attached
+    canceled: canceled
+    commented_on: commented on
+    created: created
+    deleted: deleted
+    edited: edited
+    finished: finished
+    gave_up_on: gave up on
+    joined: joined
+    left: left
+    replied_to: replied to
+    restarted: restarted
+    started: started
+    updated: updated
+
   field_tags : "Tags"
   field_points : "Avg estimated credits"
   field_logo : "Logo"
