add translation key for "see more"

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -952,6 +952,7 @@ en:
   label_no_mention : "No unread mentions"
   label_mentions : "Mentions"
   label_Tip: Tip
+  label_see_more: see more
 
   label_version_sharing_none: Not shared
   label_version_sharing_descendants: With workstreams
