--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -164,6 +164,33 @@ fr:
   mail_body_wiki_content_updated: "La page wiki '%{Page}' a été mise à jour par %{author}."
   gui_validation_error: 1 erreur
   gui_validation_error_plural: "%{Count} erreurs"
+  role:
+    board: Conseil
+    core_team: L'Équipe Principale
+    member: Membre
+    contributor: Contributeur
+    non_member: Non-Membre
+    active: Actif
+    clearance: Habilitation
+    administrator: Administrateur
+    anonymous: Anonyme
+  activity:
+    added: a ajouté
+    announced: a annoncé
+    attached: a joint
+    canceled: a annulé
+    commented_on: a posté un commentaire sur
+    created: a créé
+    deleted: a supprimé
+    edited: a modifié
+    finished: a terminé
+    gave_up_on: a abandonné
+    joined: a rejoint
+    left: a quitté
+    replied_to: a répondu à
+    restarted: a relancé
+    started: a lancé
+    updated: a mis à jour
   field_tags: "Étiquettes"
   field_points: "Crédits estimés moyens"
   field_logo: "Logo"
@@ -736,7 +763,7 @@ fr:
   label_added_time_by: "Ajouté(e) par %{author} il y a %{age}"
   label_updated_time_by: "Mis(e) à jour par %{author} il y a %{age}"
   label_created_time_by: "Créé(e) il y a %{age} par"
-  label_updated_time: "Mis(e) à jour %{value} ago"
+  label_updated_time: "Mis(e) à jour il y a %{value}"
   label_jump_to_a_project: MES WORKSTREAMS
   label_file_plural: Fichiers
   label_changeset_plural: Révisions
@@ -885,6 +912,8 @@ fr:
   label_select: "Sélectionner"
   label_no_mention: "Toutes les mentions ont été lues"
   label_mentions: "Mentions"
+  label_Tip: Astuce
+  label_see_more: voir la suite
   label_version_sharing_none: Non partagé(e)
   label_version_sharing_descendants: Avec workstreams
   label_version_sharing_hierarchy: Avec la hiérarchie de workstream
@@ -897,7 +926,7 @@ fr:
   label_display_used_statuses_only: N'afficher que les statuts utilisés dans ce traceur
   label_api_access_key: Clé d'accès API
   label_missing_api_access_key: Clé d'accès API manquante
-  label_api_access_key_created_at: "Clé d'accès API a été créé %{value} ago"
+  label_api_access_key_created_at: "Clé d'accès API créée il y a %{value}"
   label_dpp_scale: "Échelle d'estimation"
   label_motion: "Motion"
   label_motions_new: Nouvelle Motion
@@ -1208,6 +1237,9 @@ fr:
   default_issue_tracker_expense: Dépense
   default_issue_tracker_recurring: Récurrent
   default_issue_tracker_hourly: Par heure
+  default_issue_tracker_feature: Demande
+  default_issue_tracker_bug: Anomalie
+  default_issue_tracker_chore: Tâche
   enumeration_issue_priorities: Priorités d'item
   enumeration_doc_categories: Catégories des documents
   enumeration_activities: Activités (suivi du temps)
