--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -126,6 +126,19 @@ en:
   general_pdf_encoding: ISO-8859-1
   general_first_day_of_week: '7'
 
+  general:
+    refresh: refresh
+    ago: ago
+    this: this
+
+  issue:
+    new: new
+    open: open
+    committed: committed
+    accepted: accepted
+    done: done
+    from_a_to_b: From %{original} to %{updated}
+
   notice_account_reactivated: Your account has been reactivated.<br> Welcome back!<br><br> <a href="/">Home</a>
   notice_account_canceled: Your account is now canceled. Thanks for trying us out.<br><br>We would love your feedback on how we can do better.<br><br><a href="mailto:feedback@bettermeans.com">feedback@bettermeans.com</a>
   notice_account_inactive_user: Account has not yet been activated. Please check your email for activation link
@@ -206,6 +219,7 @@ en:
     announced: announced
     attached: attached
     canceled: canceled
+    changed: changed
     commented_on: commented on
     created: created
     deleted: deleted
