--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -127,9 +127,14 @@ en:
   general_first_day_of_week: '7'
 
   general:
+    a: a
     refresh: refresh
     ago: ago
+    in: in
     this: this
+    add_a_comment: Add a comment...
+    go_to_top: Go to top
+    show_more: Show more...
 
   issue:
     new: new
@@ -137,7 +142,11 @@ en:
     committed: committed
     accepted: accepted
     done: done
+    feature: feature
     from_a_to_b: From %{original} to %{updated}
+
+  tracker:
+    feature: feature
 
   notice_account_reactivated: Your account has been reactivated.<br> Welcome back!<br><br> <a href="/">Home</a>
   notice_account_canceled: Your account is now canceled. Thanks for trying us out.<br><br>We would love your feedback on how we can do better.<br><br><a href="mailto:feedback@bettermeans.com">feedback@bettermeans.com</a>
