--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -137,18 +137,17 @@ en:
     show_more: Show more...
 
   issue:
+    accepted: accepted
+    committed: committed
+    done: done
+    from_a_to_b: From %{original} to %{updated}
     new: new
     open: open
-    committed: committed
-    accepted: accepted
-    done: done
-    feature: feature
-    chore: chore
-    from_a_to_b: From %{original} to %{updated}
 
   tracker:
-    feature: feature
+    bug: bug
     chore: chore
+    feature: feature
 
   notice_account_reactivated: Your account has been reactivated.<br /> Welcome back!<br /><br /> <a href="/">Home</a>
   notice_account_canceled: Your account is now canceled. Thanks for trying us out.<br /><br />We would love your feedback on how we can do better.<br /><br /><a href="mailto:feedback@bettermeans.com">feedback@bettermeans.com</a>
@@ -214,7 +213,7 @@ en:
   gui_validation_error: 1 error
   gui_validation_error_plural: "%{count} errors"
 
-  role: &role
+  role:
     board: Board
     core_team: Core Team
     member: Member
@@ -229,8 +228,10 @@ en:
     added: added
     announced: announced
     attached: attached
+    blocked: blocked
     canceled: canceled
     changed: changed
+    changed_estimate_for: changed their estimate for
     commented_on: commented on
     created: created
     deleted: deleted
@@ -240,12 +241,12 @@ en:
     joined: joined
     left: left
     moved: moved
+    passed_a: passed a
+    publicized: publicized
     replied_to: replied to
     restarted: restarted
     started: started
     updated: updated
-    object_name:
-      <<: *role
 
   field_tags : "Tags"
   field_points : "Avg estimated credits"
