setting up a couple more translations

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -130,6 +130,7 @@ en:
     a: a
     accept: accept
     add_a_comment: Add a comment...
+    add_a_tag: add a tag
     ago: ago
     agree: agree
     block: block
